fix readability

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap");
-$main-color: #060b35;
-$secondary-color: #616070;
-$button-color: #00acdc;
+@import "./variables.scss";
 
 * {
   box-sizing: border-box;
-  margin: 0;
 }
 
 body {
@@ -24,9 +21,7 @@ body {
   border: 1px solid #f3f3f3;
   border-radius: 5px;
   width: 200px;
-
   padding: 32px 16px 16px;
-  box-sizing: border-box;
 
   &__image {
     width: 160px;
